--- a/test/Siren.Tests.csproj
+++ b/test/Siren.Tests.csproj
@@ -1,11 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <RootNamespace>tensorflow.keras</RootNamespace>
 
     <IsPackable>false</IsPackable>
-
-    <RootNamespace>ClassLib</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
@@ -22,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\src\ClassLib.csproj" />
+    <ProjectReference Include="..\src\Siren.csproj" />
   </ItemGroup>
 
 </Project>
