update to the released version of LostTech.Python.Runtime

--- a/src/Siren.csproj
+++ b/src/Siren.csproj
@@ -24,7 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="LostTech.Python.Runtime" Version="3.0.2-b1224" />
+    <PackageReference Include="LostTech.Python.Runtime" Version="3.0.2" />
     <PackageReference Include="LostTech.TensorFlow" Version="1.15.0-RC1" />
     <!-- The following is recommended for public projects -->
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
