--- a/test/ClassLib.Tests.csproj
+++ b/test/ClassLib.Tests.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <LangVersion>9.0</LangVersion>
+    <Nullable>enable</Nullable>
 
     <IsPackable>false</IsPackable>
 
