--- a/src/Siren.csproj
+++ b/src/Siren.csproj
@@ -4,8 +4,8 @@
     <AssemblyName>LostTech.TensorFlow.Siren</AssemblyName>
     <RootNamespace>tensorflow.keras</RootNamespace>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <LangVersion>8.0</LangVersion>
-    <VersionPrefix>0.1.1</VersionPrefix>
+    <LangVersion>9.0</LangVersion>
+    <VersionPrefix>0.2.0</VersionPrefix>
     <Nullable>enable</Nullable>
 
     <!-- Package stuff -->
@@ -20,7 +20,7 @@ See project page for usage example.
     <PackageProjectUrl>https://github.com/losttech/Siren</PackageProjectUrl>
     <PackageTags>TensorFlow;signal-processing;image-processing;audio-processing;video-processing;Keras;deep-learning;ML;image;audio;video;sound</PackageTags>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
-    <Authors>Victor Milovanov</Authors>
+    <Authors>Victor Nova</Authors>
     <Company>Lost Tech LLC</Company>
     <Product>LostTech.TensorFlow</Product>
     <!--<PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>-->
@@ -39,7 +39,7 @@ See project page for usage example.
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="LostTech.TensorFlow" Version="[1.15.0, 1.16)" />
+    <PackageReference Include="LostTech.TensorFlow" Version="[2.5.0-preview1, 3.0)" />
     <!-- The following is recommended for public projects -->
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
   </ItemGroup>
