--- a/asiren/asiren.csproj
+++ b/asiren/asiren.csproj
@@ -3,12 +3,15 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0-windows</TargetFramework>
-    <RootNamespace>Siren</RootNamespace>
+    <RootNamespace>LostTech.Torch.NN</RootNamespace>
+
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="libtorch-cuda-11.1-win-x64" Version="1.9.0.10" />
     <PackageReference Include="ManyConsole.CommandLineUtils" Version="1.1.8-alpha" />
-    <PackageReference Include="NAudio" Version="2.0.0" />
+    <PackageReference Include="NAudio" Version="2.0.1" />
   </ItemGroup>
 
   <ItemGroup>
@@ -16,7 +19,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Include="..\app\Clamp.cs" />
     <Compile Include="..\app\ImprovedCallback.cs" />
+    <Compile Include="..\app\TensorTools.cs" />
   </ItemGroup>
 
 </Project>
