--- a/test/Siren.Tests.csproj
+++ b/test/Siren.Tests.csproj
@@ -2,13 +2,23 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <RootNamespace>tensorflow.keras</RootNamespace>
+    <RootNamespace>LostTech.Torch.NN</RootNamespace>
 
     <IsPackable>false</IsPackable>
+
+    <LangVersion>9.0</LangVersion>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="263px-Wikipedia-logo-v2.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="libtorch-cpu" Version="1.9.0.10" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.6.1" />
+    <PackageReference Include="System.Drawing.Common" Version="4.7.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.2">
       <PrivateAssets>all</PrivateAssets>
@@ -25,7 +35,13 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Include="..\app\ArrayTools.cs" />
     <Compile Include="..\app\ImageTools.cs" />
+    <Compile Include="..\app\TensorTools.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="263px-Wikipedia-logo-v2.png" />
   </ItemGroup>
 
 </Project>
