--- a/app/app.csproj
+++ b/app/app.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\src\Siren.csproj" />
+    <ProjectReference Include="..\src\MinGPT.csproj" />
   </ItemGroup>
 
 </Project>
