--- a/test/MinGPT.Tests.csproj
+++ b/test/MinGPT.Tests.csproj
@@ -27,7 +27,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\src\Siren.csproj" />
+    <ProjectReference Include="..\src\MinGPT.csproj" />
   </ItemGroup>
 
   <ItemGroup>
