--- a/src/MinGPT.csproj
+++ b/src/MinGPT.csproj
@@ -1,24 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <AssemblyName>LostTech.Torch.Siren</AssemblyName>
+    <AssemblyName>LostTech.Torch.MinGPT</AssemblyName>
     <RootNamespace>LostTech.Torch</RootNamespace>
     <TargetFramework>net6.0</TargetFramework>
     <LangVersion>10.0</LangVersion>
-    <VersionPrefix>0.2.0</VersionPrefix>
+    <VersionPrefix>0.1.0</VersionPrefix>
     <Nullable>enable</Nullable>
 
     <!-- Package stuff -->
-    <Description>SIREN neural network (https://vsitzmann.github.io/siren/).
-
-Network with sine activations, perfect for neural representations of various signals: images, video, audio.
-
-SOTA 2020.
-
-See project page for usage example.
-    </Description>
-    <PackageProjectUrl>https://github.com/losttech/Torch.Siren</PackageProjectUrl>
-    <PackageTags>PyTorch;TorchSharp;signal-processing;image-processing;audio-processing;video-processing;Keras;deep-learning;ML;image;audio;video;sound</PackageTags>
+    <Description>TBD</Description>
+    <PackageProjectUrl>https://github.com/losttech/Torch.MinGPT</PackageProjectUrl>
+    <PackageTags>PyTorch;TorchSharp;text-processing;deep-learning;ML</PackageTags>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <Authors>Victor Nova</Authors>
     <Company>Lost Tech LLC</Company>
@@ -30,7 +23,7 @@ See project page for usage example.
     <DebugSymbols>true</DebugSymbols>
     <IncludeSymbols>true</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
-    <RepositoryUrl>https://github.com/losttech/Torch.Siren.git</RepositoryUrl>
+    <RepositoryUrl>https://github.com/losttech/Torch.MinGPT.git</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
   </PropertyGroup>
 
