--- a/app/app.csproj
+++ b/app/app.csproj
@@ -8,10 +8,13 @@
     <LangVersion>10.0</LangVersion>
     <Nullable>enable</Nullable>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+
+    <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="libtorch-cuda-11.3-win-x64" Version="1.10.0.1" />
+    <PackageReference Include="libtorch-cuda-11.3-win-x64" Version="1.11.0.1" />
+    <PackageReference Include="ShellProgressBar" Version="5.2.0" />
     <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
   </ItemGroup>
 
