--- a/src/MinGPT.csproj
+++ b/src/MinGPT.csproj
@@ -10,6 +10,7 @@
 
     <!-- Package stuff -->
     <Description>TBD</Description>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageProjectUrl>https://github.com/losttech/Torch.MinGPT</PackageProjectUrl>
     <PackageTags>PyTorch;TorchSharp;text-processing;deep-learning;ML</PackageTags>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
@@ -33,6 +34,7 @@
 	
   <ItemGroup>
     <None Include="..\LICENSE" Pack="true" PackagePath="" />
+    <None Include="..\README.md" Pack="true" PackagePath="" />
   </ItemGroup>
 
   <ItemGroup>
